--- a/binder/Dockerfile
+++ b/binder/Dockerfile
@@ -21,10 +21,24 @@ RUN apt-get update && \
     python3-graph-tool && \
     rm -rf /var/lib/apt/lists/*
 
+ARG NB_USER=jovyan
+ARG NB_UID=1000
+ENV USER ${NB_USER}
+ENV NB_UID ${NB_UID}
+ENV HOME /home/${NB_USER}
+
+RUN adduser --disabled-password \
+    --gecos "Default user" \
+    --uid ${NB_UID} \
+    ${NB_USER}
+
+COPY . ${HOME}
+USER root
+RUN chown -R ${NB_UID} ${HOME}
+USER ${NB_USER}
 
 
 RUN pip install -r requirements.txt
 
-EXPOSE 8888
 
 #CMD [ "jupyter", "notebook", "--ip=0.0.0.0", "--port=8888", "--no-browser", "--allow-root" ]
