added dead snakes repo

--- a/binder/Dockerfile
+++ b/binder/Dockerfile
@@ -15,7 +15,9 @@ RUN apt-get update && \
     curl \
     gnupg \
     lsb-release \
-    software-properties-common \
+    software-properties-common && \
+    add-apt-repository ppa:deadsnakes/ppa && \
+    apt-get update && apt-get install -y \
     python3.13 \
     python3-pip \
     python3-graph-tool && \
