ready setup for environments

--- a/source/Dockerfile
+++ b/source/Dockerfile
@@ -7,6 +7,8 @@ LABEL version="1.0"
 
 LABEL description="docker image for Master thesis"
 
+RUN mkdir /work
+
 # Update the package list and install required packages
 RUN apt-get update && \
     apt-get install -y \
@@ -19,7 +21,7 @@ RUN apt-get update && \
     software-properties-common && \
     add-apt-repository ppa:deadsnakes/ppa && \
     apt-get update && apt-get install -y \
-    python3.10.12 \
+    python3.10 \
     python3-pip && \
     rm -rf /var/lib/apt/lists/* && \
     wget https://downloads.skewed.de/skewed-keyring/skewed-keyring_1.1_all_$(lsb_release -s -c).deb && \
@@ -27,10 +29,15 @@ RUN apt-get update && \
     echo "deb [signed-by=/usr/share/keyrings/skewed-keyring.gpg] https://downloads.skewed.de/apt $(lsb_release -s -c) main" > \
     /etc/apt/sources.list.d/skewed.list && \
     apt-get update && apt-get install -y \
-    python3-graph-tool==2.80
+    libgtk-3-0 \
+    libcairo2-dev \
+    python3-gi-cairo \
+    python3-graph-tool=2.80
 
-COPY requirements.txt .
+WORKDIR /work
+
+COPY requirements.txt /work/
 
 RUN pip install -r requirements.txt
 
-#CMD [ "jupyter", "notebook", "--ip=0.0.0.0", "--port=8888", "--no-browser", "--allow-root" ]
+CMD [ "jupyter", "notebook", "--ip=0.0.0.0", "--port=8888", "--no-browser", "--allow-root" ]
