changed evn for binder

--- a/binder/environment.yml
+++ b/binder/environment.yml
@@ -16,9 +16,8 @@ dependencies:
   - dask=2024.4.2
   - dask-expr=1.0.14
   - leidenalg=0.10.2
-  - pysciebo=1.1.0
   - scipy=1.14.0
   - scikit-learn=1.5.1
-  - torch=2.3.1
+  - pytorch=2.3.1
   - wordcloud=1.9.3
   - regex=2024.5.15
